Fix input box and heading v-align.

--- a/style.css
+++ b/style.css
@@ -1085,12 +1085,13 @@ a.olx-button-large {
   box-sizing: border-box;
   color: #666;
   font-family: "Geomanist Book", Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-  line-height: 4;
   height: 48px;
+  padding-top: 0px;
   padding-left: 48px;
   padding-right: 20px;
   -webkit-appearance: none;
   width: 100%;
+  vertical-align: middle;
 }
 
 @media (min-width: 768px) {
@@ -1098,8 +1099,6 @@ a.olx-button-large {
     font-size: 16px;
     padding-left: 63px;
     padding-right: 20px;
-    padding-top: 5px;
-    line-height: 5;
   }
   [dir="rtl"] .search input[type="search"] {
     padding-right: 63px;
@@ -1113,7 +1112,6 @@ a.olx-button-large {
 }
 
 .search input[type="search"]::placeholder {
-  line-height: 4;
   color: #7f9799;
 }
 
@@ -1365,7 +1363,7 @@ zd-autocomplete-multibrand zd-autocomplete-breadcrumbs-multibrand {
 
 @media (min-width: 768px) {
   .sub-nav {
-    align-items: baseline;
+    align-items: center;
     flex-direction: row;
     padding: 20px 0;
     background-color: #fff;
