--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -11,8 +11,6 @@
             font-size: $font-size-p3;
             padding-left: 63px;
             padding-right: 20px;
-            padding-top: 5px;
-            line-height: 5;
             [dir="rtl"] & {
                 padding-right: 63px;
                 padding-left: 20px;
@@ -23,12 +21,13 @@
         box-sizing: border-box;
         color: $field-text-color;
         font-family: $paragraph_font;
-        line-height: 4;
         height: 48px;
+        padding-top: 0px;
         padding-left: 48px;
         padding-right: 20px;
         -webkit-appearance: none;
         width: 100%;
+        vertical-align: middle;
 
         [dir="rtl"] & {
             padding-right: 48px;
@@ -36,7 +35,6 @@
         }
 
         &::placeholder {
-            line-height: 4;
             color: $color-roman-silver;
         }
 
